Switch to teal theme and remove emojis

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: linear-gradient(135deg, #14b8a6 0%, #0f766e 100%);
             min-height: 100vh;
             display: flex;
             justify-content: center;
@@ -37,7 +37,7 @@
         }
 
         h1 {
-            color: #667eea;
+            color: #14b8a6;
             text-align: center;
             margin-bottom: 10px;
             font-size: 2.5em;
@@ -76,7 +76,7 @@
         .stat-value {
             font-size: 2em;
             font-weight: bold;
-            color: #667eea;
+            color: #14b8a6;
         }
 
         .scenario {
@@ -84,7 +84,7 @@
             padding: 30px;
             border-radius: 15px;
             margin-bottom: 30px;
-            border-left: 5px solid #667eea;
+            border-left: 5px solid #14b8a6;
         }
 
         .character {
@@ -99,7 +99,7 @@
             aspect-ratio: 1 / 1;
             flex: 0 0 auto;
             border-radius: 50%;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: linear-gradient(135deg, #14b8a6 0%, #0f766e 100%);
             display: flex;
             align-items: center;
             justify-content: center;
@@ -139,7 +139,7 @@
 
         .choice-btn {
             background: white;
-            border: 2px solid #667eea;
+            border: 2px solid #14b8a6;
             padding: 15px 20px;
             border-radius: 10px;
             cursor: pointer;
@@ -150,10 +150,10 @@
         }
 
         .choice-btn:hover {
-            background: #667eea;
+            background: #14b8a6;
             color: white;
             transform: translateX(5px);
-            box-shadow: 0 5px 15px rgba(102, 126, 234, 0.3);
+            box-shadow: 0 5px 15px rgba(20, 184, 166, 0.3);
         }
 
         .choice-btn:active {
@@ -201,7 +201,7 @@
 
         .progress-fill {
             height: 100%;
-            background: linear-gradient(90deg, #667eea 0%, #764ba2 100%);
+            background: linear-gradient(90deg, #14b8a6 0%, #0f766e 100%);
             transition: width 0.5s ease;
             display: flex;
             align-items: center;
@@ -216,7 +216,7 @@
         }
 
         .game-over h2 {
-            color: #667eea;
+            color: #14b8a6;
             font-size: 2.5em;
             margin-bottom: 20px;
         }
@@ -228,7 +228,7 @@
         }
 
         .restart-btn {
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: linear-gradient(135deg, #14b8a6 0%, #0f766e 100%);
             color: white;
             border: none;
             padding: 15px 40px;
@@ -257,7 +257,7 @@
         }
 
         .ok-btn {
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: linear-gradient(135deg, #14b8a6 0%, #0f766e 100%);
             color: white;
             border: none;
             padding: 12px 30px;
@@ -271,7 +271,7 @@
 
         .ok-btn:hover {
             transform: scale(1.05);
-            box-shadow: 0 5px 15px rgba(102, 126, 234, 0.4);
+            box-shadow: 0 5px 15px rgba(20, 184, 166, 0.4);
         }
 
         .ok-btn:active {
@@ -292,8 +292,8 @@
 
         .skip-btn:hover {
             background: #f5f5f5;
-            border-color: #667eea;
-            color: #667eea;
+            border-color: #14b8a6;
+            color: #14b8a6;
         }
 
         .skip-btn:active {
@@ -310,23 +310,23 @@
 
         .lang-btn {
             background: white;
-            border: 2px solid #667eea;
+            border: 2px solid #14b8a6;
             padding: 8px 15px;
             border-radius: 20px;
             cursor: pointer;
             font-size: 0.9em;
             transition: all 0.3s ease;
-            color: #667eea;
+            color: #14b8a6;
             font-weight: bold;
         }
 
         .lang-btn:hover {
-            background: #667eea;
+            background: #14b8a6;
             color: white;
         }
 
         .lang-btn.active {
-            background: #667eea;
+            background: #14b8a6;
             color: white;
         }
 
@@ -342,7 +342,7 @@
         }
 
         .tutorial h2 {
-            color: #667eea;
+            color: #14b8a6;
             font-size: 2em;
             margin-bottom: 20px;
         }
@@ -353,11 +353,11 @@
             border-radius: 15px;
             margin-bottom: 25px;
             text-align: left;
-            border-left: 5px solid #667eea;
+            border-left: 5px solid #14b8a6;
         }
 
         .tutorial-section h3 {
-            color: #667eea;
+            color: #14b8a6;
             margin-bottom: 15px;
             font-size: 1.4em;
         }
@@ -381,7 +381,7 @@
         }
 
         .start-game-btn {
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: linear-gradient(135deg, #14b8a6 0%, #0f766e 100%);
             color: white;
             border: none;
             padding: 18px 50px;
@@ -395,7 +395,7 @@
 
         .start-game-btn:hover {
             transform: scale(1.05);
-            box-shadow: 0 10px 25px rgba(102, 126, 234, 0.4);
+            box-shadow: 0 10px 25px rgba(20, 184, 166, 0.4);
         }
 
         .start-game-btn:active {
@@ -410,7 +410,7 @@
         }
 
         .self-compassion-section h2 {
-            color: #667eea;
+            color: #14b8a6;
             font-size: 2em;
             margin-bottom: 20px;
         }
@@ -421,11 +421,11 @@
             border-radius: 15px;
             margin-bottom: 25px;
             text-align: left;
-            border-left: 5px solid #667eea;
+            border-left: 5px solid #14b8a6;
         }
 
         .self-compassion-content h3 {
-            color: #667eea;
+            color: #14b8a6;
             margin-bottom: 15px;
             font-size: 1.4em;
         }
@@ -456,7 +456,7 @@
         }
 
         .breathing-exercise h2 {
-            color: #667eea;
+            color: #14b8a6;
             font-size: 2em;
             margin-bottom: 20px;
         }
@@ -467,7 +467,7 @@
             border-radius: 15px;
             margin-bottom: 30px;
             text-align: left;
-            border-left: 5px solid #667eea;
+            border-left: 5px solid #14b8a6;
             color: #444;
             line-height: 1.8;
             font-size: 1.05em;
@@ -519,9 +519,9 @@
             width: 100px;
             height: 100px;
             border-radius: 50%;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: linear-gradient(135deg, #14b8a6 0%, #0f766e 100%);
             transition: all 1s ease;
-            box-shadow: 0 10px 30px rgba(102, 126, 234, 0.3);
+            box-shadow: 0 10px 30px rgba(20, 184, 166, 0.3);
             z-index: 2;
         }
 
@@ -591,7 +591,7 @@
 
         .breathing-phase {
             font-size: 1.5em;
-            color: #667eea;
+            color: #14b8a6;
             font-weight: bold;
             margin-bottom: 10px;
         }
@@ -621,7 +621,7 @@
         }
 
         .scenarios-complete h2 {
-            color: #667eea;
+            color: #14b8a6;
             font-size: 2.5em;
             margin-bottom: 20px;
         }
@@ -631,7 +631,7 @@
             padding: 30px;
             border-radius: 15px;
             margin: 30px 0;
-            border-left: 5px solid #667eea;
+            border-left: 5px solid #14b8a6;
         }
 
         .scenarios-complete .result-stats {
@@ -642,7 +642,7 @@
         }
 
         .scenarios-complete .result-stats div {
-            color: #667eea;
+            color: #14b8a6;
             font-weight: bold;
         }
 
@@ -654,7 +654,7 @@
         }
 
         .transition-screen h2 {
-            color: #667eea;
+            color: #14b8a6;
             font-size: 2em;
             margin-bottom: 20px;
         }
@@ -674,7 +674,7 @@
         }
 
         .exercise-section h2 {
-            color: #667eea;
+            color: #14b8a6;
             font-size: 2em;
             margin-bottom: 20px;
         }
@@ -685,7 +685,7 @@
             border-radius: 15px;
             margin-bottom: 30px;
             text-align: left;
-            border-left: 5px solid #667eea;
+            border-left: 5px solid #14b8a6;
             color: #444;
             line-height: 1.8;
             font-size: 1.05em;
@@ -706,8 +706,8 @@
 
         .exercise-textarea:focus {
             outline: none;
-            border-color: #667eea;
-            box-shadow: 0 0 0 3px rgba(102, 126, 234, 0.1);
+            border-color: #14b8a6;
+            box-shadow: 0 0 0 3px rgba(20, 184, 166, 0.1);
         }
 
         .exercise-textarea::placeholder {
@@ -722,7 +722,7 @@
         }
 
         .quiz-section h2 {
-            color: #667eea;
+            color: #14b8a6;
             font-size: 2em;
             margin-bottom: 20px;
         }
@@ -732,7 +732,7 @@
             padding: 20px;
             border-radius: 15px;
             margin-bottom: 30px;
-            border-left: 5px solid #667eea;
+            border-left: 5px solid #14b8a6;
             color: #444;
             line-height: 1.8;
         }
@@ -756,7 +756,7 @@
 
         .quiz-question-box {
             background: #f9f9f9;
-            border: 3px dashed #667eea;
+            border: 3px dashed #14b8a6;
             border-radius: 10px;
             padding: 20px;
             min-height: 100px;
@@ -765,7 +765,7 @@
             justify-content: center;
             text-align: center;
             font-weight: bold;
-            color: #667eea;
+            color: #14b8a6;
             position: relative;
         }
 
@@ -776,7 +776,7 @@
 
         .quiz-answer-box {
             background: white;
-            border: 2px solid #667eea;
+            border: 2px solid #14b8a6;
             border-radius: 10px;
             padding: 15px;
             cursor: move;
@@ -788,7 +788,7 @@
         .quiz-answer-box:hover {
             background: #f0f0f0;
             transform: translateY(-2px);
-            box-shadow: 0 5px 15px rgba(102, 126, 234, 0.3);
+            box-shadow: 0 5px 15px rgba(20, 184, 166, 0.3);
         }
 
         .quiz-answer-box.dragging {
@@ -942,7 +942,7 @@
             <button class="lang-btn" onclick="setLanguage('en')" id="lang-en">EN</button>
             <button class="lang-btn active" onclick="setLanguage('sl')" id="lang-sl">SI</button>
         </div>
-        <h1 id="gameTitle">❤️ Compassion Quest</h1>
+        <h1 id="gameTitle">Compassion Quest</h1>
         <p class="subtitle" id="gameSubtitle">Build empathy through meaningful choices</p>
 
         <div class="stats hidden" id="statsContainer">
@@ -1025,7 +1025,7 @@
         </div>
 
         <div id="gameOver" class="game-over hidden">
-            <h2 id="gameOverTitle">🎉 Journey Complete!</h2>
+            <h2 id="gameOverTitle">Journey Complete!</h2>
             <div class="final-score" id="finalScore"></div>
             <p style="color: #666; margin-bottom: 30px; line-height: 1.8;" id="gameOverMessage">
                 You've completed your compassion quest! Every choice you made had an impact. 
@@ -1140,7 +1140,7 @@
 
         const translations = {
             en: {
-                title: "❤️ Compassion Quest",
+                title: "Compassion Quest",
                 subtitle: "Build empathy through meaningful choices",
                 compassionScore: "Compassion Score",
                 livesTouched: "Lives Touched",
@@ -1148,7 +1148,7 @@
                 exercises: "Exercises",
                 quiz: "Quiz",
                 ok: "OK",
-                gameOverTitle: "🎉 Journey Complete!",
+                gameOverTitle: "Journey Complete!",
                 gameOverMessage: "You've completed your compassion quest! Every choice you made had an impact. Remember, compassion is not just about grand gestures—it's about the small, everyday acts of kindness that make the world a better place.",
                 playAgain: "Play Again",
                 points: "Compassion Points",
@@ -1199,7 +1199,7 @@
                 breathingRepeat: "Round",
                 breathingComplete: "Well done! You've completed the breathing exercise. Take a moment to appreciate this act of self-care.",
                 breathingContinueBtn: "Continue",
-                scenariosCompleteTitle: "🎉 Scenarios Complete!",
+                scenariosCompleteTitle: "Scenarios Complete!",
                 scenariosCompleteMessage: (score, lives) => {
                     if (score < 0 || lives <= 1) {
                         return "Congratulations! You've completed all scenarios.";
@@ -1256,14 +1256,14 @@
                 exerciseComplete: "Congratulations, you've done something compassionate for yourself.",
                 exerciseCompleteMental: "That's okay—this exercise can be mental too. Take a moment to reflect, then continue.",
                 finalScore: {
-                    exceptional: (score, lives) => `🌟 Exceptional! Your compassion score is ${score}. You've touched ${lives} lives. You truly understand what it means to be compassionate and care for humanity.`,
-                    wonderful: (score, lives) => `✨ Wonderful! Your compassion score is ${score}. You've touched ${lives} lives. Your kindness makes a real difference.`,
-                    good: (score, lives) => `👍 Good effort! Your compassion score is ${score}. You've touched ${lives} lives. Keep practicing empathy and kindness.`,
-                    default: (score, lives) => `💭 Your compassion score is ${score}. You've touched ${lives} lives. Remember, every act of kindness matters—even the small ones.`
+                    exceptional: (score, lives) => `Exceptional! Your compassion score is ${score}. You've touched ${lives} lives. You truly understand what it means to be compassionate and care for humanity.`,
+                    wonderful: (score, lives) => `Wonderful! Your compassion score is ${score}. You've touched ${lives} lives. Your kindness makes a real difference.`,
+                    good: (score, lives) => `Good effort! Your compassion score is ${score}. You've touched ${lives} lives. Keep practicing empathy and kindness.`,
+                    default: (score, lives) => `Your compassion score is ${score}. You've touched ${lives} lives. Remember, every act of kindness matters—even the small ones.`
                 }
             },
             sl: {
-                title: "❤️ Po poti sočutja",
+                title: "Po poti sočutja",
                 subtitle: "Gradite empatijo skozi pomembne odločitve",
                 compassionScore: "Točke sočutja",
                 livesTouched: "Dotaknjena življenja",
@@ -1271,7 +1271,7 @@
                 exercises: "Vadbe",
                 quiz: "Test",
                 ok: "V redu",
-                gameOverTitle: "🎉 Potovanje končano!",
+                gameOverTitle: "Potovanje končano!",
                 gameOverMessage: "Zaključili ste svojo pot sočutja! Vsaka vaša odločitev je imela vpliv. Ne pozabite, sočutje ni le o velikih gestah - gre za majhna, vsakodnevna dejanja prijaznosti, ki naredijo svet boljši.",
                 playAgain: "Igraj ponovno",
                 points: "Točke sočutja",
@@ -1322,7 +1322,7 @@
                 breathingRepeat: "Krog",
                 breathingComplete: "Odlično! Dokončali ste dihalno vajo. Vzemite si trenutek, da cenite ta dejanje samooskrbe.",
                 breathingContinueBtn: "Nadaljuj",
-                scenariosCompleteTitle: "🎉 Scenariji zaključeni!",
+                scenariosCompleteTitle: "Scenariji zaključeni!",
                 scenariosCompleteMessage: (score, lives) => {
                     if (score < 0 || lives <= 1) {
                         return "Čestitke! Dokončali ste vse scenarije.";
@@ -1379,10 +1379,10 @@
                 exerciseComplete: "Čestitke, naredili ste nekaj sočutnega do sebe.",
                 exerciseCompleteMental: "V redu je — ta vaja je lahko tudi mentalna. Vzemite si trenutek za razmislek, nato nadaljujte.",
                 finalScore: {
-                    exceptional: (score, lives) => `🌟 Izjemno! Vaša točka sočutja je ${score}. Dotaknili ste se ${lives} življenj. Resnično razumete, kaj pomeni biti sočuten in skrbeti za človeštvo.`,
-                    wonderful: (score, lives) => `✨ Čudovito! Vaša točka sočutja je ${score}. Dotaknili ste se ${lives} življenj. Vaša prijaznost naredi resnično razliko.`,
-                    good: (score, lives) => `👍 Dobro delo! Vaša točka sočutja je ${score}. Dotaknili ste se ${lives} življenj. Nadaljujte z vadbo empatije in prijaznosti.`,
-                    default: (score, lives) => `💭 Vaša točka sočutja je ${score}. Dotaknili ste se ${lives} življenj. Ne pozabite, vsako dejanje prijaznosti šteje - tudi majhne pozornosti.`
+                    exceptional: (score, lives) => `Izjemno! Vaša točka sočutja je ${score}. Dotaknili ste se ${lives} življenj. Resnično razumete, kaj pomeni biti sočuten in skrbeti za človeštvo.`,
+                    wonderful: (score, lives) => `Čudovito! Vaša točka sočutja je ${score}. Dotaknili ste se ${lives} življenj. Vaša prijaznost naredi resnično razliko.`,
+                    good: (score, lives) => `Dobro delo! Vaša točka sočutja je ${score}. Dotaknili ste se ${lives} življenj. Nadaljujte z vadbo empatije in prijaznosti.`,
+                    default: (score, lives) => `Vaša točka sočutja je ${score}. Dotaknili ste se ${lives} življenj. Ne pozabite, vsako dejanje prijaznosti šteje - tudi majhne pozornosti.`
                 }
             }
         };
@@ -3292,7 +3292,7 @@
             const exerciseDiv = document.getElementById('breathingExercise');
             exerciseDiv.innerHTML = `
                 <h2>${t.breathingSkipTitle}</h2>
-                <div class="breathing-complete" style="background: #e7f3ff; border-left-color: #667eea; color: #004085;">
+                <div class="breathing-complete" style="background: #e7f3ff; border-left-color: #14b8a6; color: #004085;">
                     <p style="font-size: 1.1em; line-height: 1.8; margin-bottom: 20px;">${t.breathingSkipMessage}</p>
                     <p style="font-weight: bold; margin-bottom: 10px;">${t.breathingSkipAlternative}</p>
                     <ul style="text-align: left; margin-left: 20px; line-height: 1.8;">
